package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

load("//tools:defs.bzl", "closure_js_library", "closure_js_binary")


filegroup(
    name = "google_codelab_analytics_files",
    srcs = [
      ":google_codelab_analytics_bin",
    ],
)

# Codelab Analytics.
closure_js_library(
    name = "google_codelab_analytics",
    srcs = ["google_codelab_analytics.js"],
    deps = [
        "@io_bazel_rules_closure//closure/library",
    ],
)

# Compiled version of GoogleCodelabAnalytics element, suitable for distribution.
closure_js_binary(
    name = "google_codelab_analytics_bin",
    entry_points = ["googlecodelabs.CodelabAnalytics"],
    deps = [":google_codelab_analytics"],
)
